--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -62,6 +62,21 @@
   howpublished = {\url{http://www.phy.mtu.edu/~suits/notefreqs.html}},
   year = {1998},
 }
+@MISC{sou:NoteA,
+  title = {Physics Department, Michigan Technological University - (Frequencies for equal-tempered scale, A4 = 440 Hz)},
+  author = {B. H. Suits},
+  note = {Downloaded February 19, 2016},
+  howpublished = {\url{http://www.phy.mtu.edu/~suits/notefreqs.html}},
+  year = {1998},
+}
+
+@MISC{sou:LoudspeakerRange,
+  title = {Understanding How Speaker Drivers Work)},
+  author = {Danny Briere, Pat Hurley},
+  note = {Downloaded May 22, 2016},
+  howpublished = {\url{http://www.dummies.com/how-to/content/understanding-how-speaker-drivers-work.html}},
+  year = {2016},
+}
 
 
 
