--- a/Rapport/1Chapters/1Preanalysis/Amplifier.tex
+++ b/Rapport/1Chapters/1Preanalysis/Amplifier.tex
@@ -1,14 +1,14 @@
 \section{Amplifier}
-The amplifier is the module which amplifies the input signal. There are several different classes of amplifiers for example class A, AB and D, these classes have different characteristics which gives them different advantages and disadvantages. Two main parameters for the performance of an amplifier are distortion and efficiency. There are several sources for the distortion in a amplifier, such as non-linearity in the active components, crossover distortion and audio clipping. Since no active components are ideal, all active components will create some distortion whenever a signal is passed through the components. An option for better performance is to increase the open-loop amplification of the amplifier as this will give more signal to feedback over thus decreasing the distortion from the components. Since the extend of this project will not deal with circuit design of an amplifier, crossover and non-linearity in component will not be further investigated.
+The amplifier is the module which amplifies the input signal. There are several different classes of amplifiers for example class A, AB and D, these classes have different characteristics which gives them different advantages and disadvantages. Two main parameters for the performance of an amplifier are distortion and efficiency. There are several sources of distortion in a amplifier, such as non-linearity in active components, crossover distortion and audio clipping. Since no active components are ideal, all active components will create some distortion whenever a signal is passed through the components. Since the extend of this project will not deal with circuit design of an amplifier, crossover and non-linearity in components this will not be further investigated.
 
-Audio clipping is a wave distortion that occurs when the output signal has a greater signal level than the device is capable of producing. If the signal level is beyond the limitation of the device, the device will cut the signal to its maximum level. This type of clipping is called hard clipping and is often undesirable. In \autoref{fig:audioclipping} an example of how hard clipping affects a 1 kHz sinusoid with a peak amplitude of 1.5, a maximum output level of the device of 1 is illustrated.
+Audio clipping is a wave distortion that occurs when the output signal has a greater signal level than the device is capable of producing. If the signal level is beyond the limitation of the device, the device will clip the signal to its maximum level. This type of clipping is called hard clipping and is often undesirable. In \autoref{fig:audioclipping} an example of how hard clipping affects a 1 kHz sinusoid with a peak amplitude of 1.5, and a maximum output level of the device of 1 is illustrated.
 
 \begin{figure}[H]
 \centering
 \begin{subfigure}[t]{0.47\textwidth}
 	\tikzsetnextfilename{clippingClean}
 	\input{figures/clippingClean.tex}
-	\caption{A 1 kHz sinusoid with a peak amplitude on 1.5.}
+	\caption{A 1 kHz sinusoid with a peak amplitude of 1.5.}
 	\label{fig:clippingClean}
 \end{subfigure}
 \hspace{6mm} 
@@ -22,7 +22,7 @@ Audio clipping is a wave distortion that occurs when the output signal has a gre
 \label{fig:audioclipping}
 \end{figure}
 
-Hard clipping lowers the sound quality if the clipping is not intended, and should therefore be avoided. The wave distortion created by the sharp edge results in a square-wave-like signal. This creates additional uneven harmonics to the signal i.e. 3rd, 5th, 7th and 9th, which are unpleasant to listen to as explained in \autoref{app:distortion}. Since the clipping creates the square-wave-like signal, the generation of the additional uneven harmonics can be described in the Fourier series of a square-wave. The Fourier series of a square-wave is given as:
+Hard clipping lowers the sound quality if the clipping is not intended, and should therefore be avoided. The wave distortion created by the sharp edge results in a square-wave-like signal. This creates additional uneven harmonics to the signal i.e. 3rd, 5th, 7th and 9th, which are unpleasant to listen to as explained in Appendix \ref{app:distortion}. Since the clipping creates the square-wave-like signal, the generation of the additional uneven harmonics can be described in the Fourier series of a square-wave. The Fourier series of a square-wave is given as:
 \begin{align}\label{eq:fourier_series_square}
 f(t) &= \frac{4}{\pi} (\sin(\omega_0 t) + \frac{1}{3}\sin(3 \omega_0 t) + \frac{1}{5}\sin(5 \omega_0 t) + \, ... \,)
 \end{align}
@@ -30,7 +30,7 @@ f(t) &= \frac{4}{\pi} (\sin(\omega_0 t) + \frac{1}{3}\sin(3 \omega_0 t) + \frac{
 \va{$\omega_0$}{is the fundamental frequency of the square-wave.}{rad/s}\\
 \end{where}
 
-As seen in \autoref{eq:fourier_series_square}, the function of a square-wave signal consists of a fundamental frequency $\omega_0$ and uneven harmonics to the fundamental frequency. This can also be shown in a spectrum analysis of the 1 kHz clipped sinusoid from \autoref{fig:audioclipping} in \autoref{fig:audioclippingFFT}.
+As seen in \autoref{eq:fourier_series_square}, the function of a square-wave signal consists of a fundamental frequency $\omega_0$ and uneven harmonics of $\omega_0$. This can also be shown in a spectrum analysis of the 1 kHz clipped sinusoid from \autoref{fig:audioclipping} in \autoref{fig:audioclippingFFT}.
 
 \begin{figure}[H]
 \centering
@@ -47,11 +47,11 @@ As seen in \autoref{eq:fourier_series_square}, the function of a square-wave sig
 	\caption{FFT of a 1 kHz sinusoid with clipping.}
 	\label{fig:clippingDistFFT}
 \end{subfigure}
-\caption{The Fast Fourier Transformation(FFT) of the 1 kHz sinusoid with a peak amplitude on 1.5 which is clipped to 1. }
+\caption{The Fast Fourier Transformation(FFT) of the 1 kHz sinusoid with a peak amplitude of 1.5 which is clipped to 1. }
 \label{fig:audioclippingFFT}
 \end{figure}
 %The sampling frequency is 48 kHz and a Kaiser-window function with a $\beta$-value of 38 is applied to both signal.
-The amplitude difference between the fundamental frequency on 1 kHz and the 3rd harmonic frequency is 16 dB, which is approximately a factor of 6.3 in linear scale. If the signal is clipped even more, the amplitude difference between the fundamental frequency and uneven harmonics decreases thus making it even more unpleasant. Therefore audio clipping should be avoided or minimized.
+The amplitude difference between $\omega_0$ of 1 kHz and the 3rd harmonic frequency is 16 dB, which is approximately a factor of 6.3 in linear scale. If the signal is clipped even more, the amplitude difference between $\omega_0$ and uneven harmonics decreases thus making it even more unpleasant. Therefore audio clipping should be avoided or minimized.
 
 Similar distortion characteristic is achieved by using a hard clipping limiter in a DSP. Therefore a hard clipping peak limiter is not ideal for protecting the loudspeaker and still keep the amount of distortion at a low level.
 
