--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -1,15 +1,15 @@
 \section{Loudspeaker}
 
-As previously stated, distortion also occurs in the woofer block in \autoref{fig:speaker_block}. In order to understand how the distortion occurs in a loudspeaker, it is necessary to understand the basic fundamentals and the topology of a loudspeaker. %This section will consist of the basic topology and then glans over the topic of vibration induced in the speaker woofer.
+In order to understand how the distortion occurs in a loudspeaker, it is necessary to understand the basic fundamentals and the topology of a loudspeaker. %This section will consist of the basic topology and then glans over the topic of vibration induced in the speaker woofer.
 
 %\subsubsection*{The basics}
-The loudspeaker is a transducer which purpose is to convert the electrical energy into acoustical energy. This is done by sending the signal into the speaker which can consist of numerous drivers. The drivers are designed to perform best within their frequency range, hence they are usually different sizes in diameter.
+The loudspeaker is a transducer which purpose is to convert the electrical energy into acoustical energy. This is done by sending the signal into a loudspeaker which can consist of numerous drivers. The drivers are designed to perform best within their frequency range, hence they are usually different sizes in diameter.
 \begin{itemize}
-\item[] For the high frequencies their is a tweeter, 1 - 2 inches in diameters, high frequencies is roughly 3 - 4 kHz and above.
-\item[] In the midrange their is a midrange driver which usually is around 5 - 6 inches. The midrange is roughly 300 Hz to 3 - 4 kHz. 
-\item[] The lower frequencies, which is 300 Hz and below, is then handled by the woofer. The woofer is usually 5 - 6 inches and above in diameter.
+\item[] For the high frequencies, which is roughly 2 kHz and above, a tweeter is used of approximately 1 - 2 inches in diameter.
+\item[] In the midrange, which is roughly 300 Hz to 200 - 2 kHz, a midrange driver is used of approximately 4 - 6 inches in diameter.
+\item[] The lower frequencies, which is 200 Hz and below, is then handled by the woofer. The woofer is usually 5 - 6 inches and above in diameter.
 \end{itemize}
-The reason for different diameters in drivers is because of the wavelength the specific frequencies consists of. Should a woofer play frequencies at +4 kHz it would end in the driver physically not being able to move that fast. The limitations will end up in non-linear distortion in the diaphragm. Vice versa, should a tweeter reproduce low frequency sound at high \gls{SPL} it will end in distortion. %The tweeter has a very low excursion range which limits it to the high frequency area. 
+The reason for different diameters in drivers is because of the wavelength of the specific frequencies. Should a woofer play frequencies at +4 kHz it would result in the driver physically not being able to move that fast. The limitations will end up in non-linear distortion in the diaphragm. Vice versa, should a tweeter reproduce low frequency sound at high \gls{SPL} it will end in distortion. %The tweeter has a very low excursion range which limits it to the high frequency area. 
 Because the tweeter has a very low excursion range, which means it cannot break because of its physical movement only the woofer will be analyzed further. 
 
 %\todo[inline]{Måske noget forklaring om det kun er nødvendigt at kigge på wooferen}
@@ -17,25 +17,24 @@ Because the tweeter has a very low excursion range, which means it cannot break 
 
 \subsection*{Diaphragm excursion}
 When the speaker plays sound it does so by moving the diaphragm in the woofer. This difference in air pressure is then perceived as sound. The sound has a specific wavelength according to the frequency. This means that trying to move the air with a speaker cone is more efficient in a specific frequency area according to the diameter. %If a speaker with a small diameter tries to generate a large wavelength the sound would bend and escape around the edges. 
-Since a large wavelength requires more air to be pushed speaker cones is sized according to what area they are going to play.
+Since a large wavelength requires more air to be pushed, speaker cones is sized according to what area they are going to play.
 
-Next, the woofer needs to deliver a sufficient \gls{SPL}. This creates the need for a enough excursion of the diaphragm. Without dwelling to much on the speaker construction, the diaphragm is suspended in free air hold in place by the surround, see \autoref{fig:regularspeaker}, and the spyder. The spyder is a diaphragm holding the voice coil more tightly in place. 
+Next, the woofer needs to deliver a sufficient \gls{SPL}. This creates the need for enough excursion of the diaphragm. Without dwelling to much on the speaker construction, the diaphragm is suspended in free air hold in place by the surround, see \autoref{fig:regularspeaker}, and the spider. The spider is a diaphragm holding the voice coil more tightly in place. 
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{Speaker-cross-section}
-\caption{Cross section of a woofer}
+\caption{Cross section of a woofer.}
 \label{fig:louderspeakerCrossSection}
 \end{figure}
 
 When the diaphragm moves it will have physical limits from the mechanical construction. At most, the diaphragm will move regular and linear. When the diaphragm is pushed to the boundaries, the limits of the mechanical construction will intervene and create non-linearities and distortion as seen in \autoref{fig:excursion_graph}. %This is discussed further in \autoref{subsec:impulses}.
 
-
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{excursion_graph}
 \input{figures/excursion_graph.tex}
-\caption{Excursion}
+\caption{General linearity curve of a loudspeaker.}
 \label{fig:excursion_graph}
 \end{figure}
 
@@ -44,7 +43,7 @@ When the diaphragm moves it will have physical limits from the mechanical constr
 
 
 \subsection*{Back plate hit}\label{subsec:impulses}
-Another issue concerning the physical limits is the coil hitting the back plate. This would result in distortion and damage on the coil since the it is hitting the absolute furthest position possible. This situation can however be resolved by moving the back plate further back. This would make the surround determine how far the diaphragm can be pushed. This however mean that the physical size of the loudspeaker needs to be increases which is not always desired.
+Another issue concerning the physical limits is the coil hitting the back plate. This would result in distortion and damage on the coil since it is hitting the absolute furthest position possible. This situation can however be resolved by moving the back plate further back. This would make the surround determine how far the diaphragm can be pushed. This however means that the physical size of the loudspeaker needs to be increases which is not always desired.
 
 % \begin{figure}[H]
 % \centering
@@ -65,7 +64,7 @@ Another issue concerning the physical limits is the coil hitting the back plate.
 % \label{fig:impulse2}
 % \end{figure}
 
-If the coil hits the back plate it will create an impulse which will give a energy spike in a wider frequency area dependent on the impulse and the speaker itself as seen on \autoref{fig:impulse}. The shorter the impulse the wider the frequency area as seen in the differences seen between \autoref{fig:impulse1} and \autoref{fig:impulse2}.  
+If the coil hits the back plate it will create an impulse which will give an energy spike in a wider frequency range dependent on the impulse and the speaker itself as seen on \autoref{fig:impulse}. The shorter the impulse, the wider the frequency range as compared in the differences seen between \autoref{fig:impulse1} and \autoref{fig:impulse2}.  
 
 \begin{figure}[H]
 \begin{subfigure}[t]{0.47\textwidth}
@@ -88,7 +87,7 @@ If the coil hits the back plate it will create an impulse which will give a ener
 \caption{Two different impulses and there frequency response.}
 \label{fig:impulse}
 \end{figure}
-Besides the characteristics of the impulse the speaker will act as a low pass filter so the frequency response of an impulse will always resemble the frequency response of \autoref{fig:impulse2} of some sort. However when playing music these impulses will be difficult to estimate through an spectrum analysis, because music in itself can consist of impulses.     
+Besides the characteristics of the impulse the loudspeaker will act as a low-pass filter so the frequency response of an impulse will always resemble the frequency response of \autoref{fig:impulse2} of some sort. However when playing music these impulses will be difficult to estimate through a spectrum analysis, because music in itself can consist of impulses.     
 
 
 %that occurs at playback. The vibrations occurs because the  If the vibration. the sound radiated from the loudspeaker enclosure
