--- a/Rapport/1Chapters/Simulation.tex
+++ b/Rapport/1Chapters/Simulation.tex
@@ -1,63 +1,49 @@
 \chapter{Simulation}
-All components for the subsystems have now been designed, which leads to a simulation of the full system to make sure the system will be performing as expected when implemented in the DSP. The full system has 7 downsampling stages, which mean that the Fs will be $Fs/128=375 Hz$.The decimation filter has a delay of 25 samples  while the interpolation filter has a delay of 17 samples, therefore the band in the differetn downsampling stages must be delayed correctly so the bands can be summed up in phase. 
+All components for the subsystems have now been designed, which leads to a simulation of the full system to make sure the system will be performing as expected when implemented in the DSP. The full system has 7 downsampling stages, which mean that the Fs will be $Fs/128=375 Hz$.The decimation filter has a delay of 25 samples  while the interpolation filter has a delay of 17 samples, therefore the band after the different downsampling stages must be delayed correctly so the bands can be summed up in phase. 
 
 To calculate the delays the following formula is used for every band:
-
-Stage 1:
 \begin{equation}
-Z^{-d}_{stage} = (M_{Int}/2) + \sum_{n=1}^{6} ((M_{Dec}/2)\cdot 2^n+(M_{Int}/2)\cdot 2^n) = 5309\enhed{samples}
+Z^{-d}_{band} = (M_{Int}/2) + \sum_{n=1}^{6} ((M_{Dec}/2)\cdot 2^n+(M_{Int}/2)\cdot 2^n) = 5309\enhed{samples}
 \label{eq:delays}
 \end{equation}
-Stage 2: 2621 sample delay (n going from 1 to 5). \\
-Stage 3: 1277 sample delay (n going from 1 to 4). \\
-Stage 4: 605 sample delay (n going from 1 to 3). \\
-Stage 5: 269 sample delay (n going from 1 to 2). \\
-Stage 6: 101 sample delay (n going from 1 to 1). 
+Band 2: 2621 sample delay (n going from 1 to 5). \\
+Band 3: 1277 sample delay (n going from 1 to 4). \\
+Band 4: 605 sample delay (n going from 1 to 3). \\
+Band 5: 269 sample delay (n going from 1 to 2). \\
+Band 6: 101 sample delay (n going from 1 to 1). 
 
-While the last delay in stage 8 is only the delay of the interpolation filter which equals 17: \\
-Stage 7: 17.
-
-
+While the last delay in band 8 is only the delay of the interpolation filter which equals 17: \\
+Band 7: 17 sample delay.
 
 
-On \autoref{fig:OverallSimulation} an outline of the entire system is depicted. It shows how a signal is applied to the first downsampling and then applied to the following consecutive downsamplings. When the signal has reached the four lowest band, a RMS compressor is applied, before each step is upsampled and ready for playback.
+On \autoref{fig:OverallSimulation} an outline of the entire system is depicted. It shows how a signal is applied to the first downsampling and then applied to the following consecutive downsamplings. When the signal has reached the four lowest band, a RMS compressor is applied. Each band is delayed according to the calculated delays, upsampled and summed together, whiched is outputted.
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth,angle=90, page=1]{Simulation}
 \label{fig:OverallSimulation}
-\caption{Overall view of the system being simulated}
+\caption{Overall view of the system used for simulation in Simulink.}
 \end{figure}
 
-Under the simulation, the following settings are set/applied:
-\begin{itemize}
-\item The sampling frequency is 48 kHz.
-\item The test signal played with an amplitude of 0.5.
-\item The test signal is a logarithmic sweep from 0 Hz to 500 Hz during a 10 second period.
-\end{itemize}
-
-The simulation file and needed scripts are found at \path{CD://something }
-
-\section{Subsystems}
 In the simulation the following subsystem depicted on \autoref{fig:SubsystemSimulation}, are used. On \autoref{fig:DownsamplingSimulation} the downsampling system is shown. It shows how the signal is first filtered followed by subtracting it from the original signal and finally downsampled. \autoref{fig:UpsamplingSimulation} shows the upsampling system where it shows how the upsampling flow of the signal is. Namely how the signal is zero-padded followed by an lowpass filtering and then applied a gain of 2 corresponding with the up-samplings factor. \autoref{fig:RMSCompressorSimulation} Shows the compressor algorithm applied in the simulation. The compressor calculates the RMS where an if statement determined whether a gain of 1 or the model should be used. When the gain has been determined it is multiplied on before being ready for up-sampling. 
 \begin{figure}[H]
 \centering
 \begin{subfigure}[t]{0.49\textwidth}
     \centering
 \includegraphics[width=\textwidth, page=2]{Simulation}
-    \caption{Downsampling system}
+    \caption{Decimaation subsystem.}
     \label{fig:DownsamplingSimulation}
 \end{subfigure}
 \begin{subfigure}[t]{0.49\textwidth}
     \centering
 \includegraphics[width=\textwidth, page=11]{Simulation}
-    \caption{Upsampling system}
+    \caption{Interpolation subsystem.}
     \label{fig:UpsamplingSimulation}
 \end{subfigure}
 \begin{subfigure}[t]{\textwidth}
     \centering
 \includegraphics[width=\textwidth, page=13]{Simulation}
-    \caption{RMS Compressor}
+    \caption{RMS Compressor subsystem.}
     \label{fig:RMSCompressorSimulation}
 \end{subfigure}
 \label{fig:SubsystemSimulation}
@@ -73,6 +59,17 @@ During the simulation the following settings has been applied to the subsystems:
 \end{itemize}
 
 \section{10 second simulation}
+Under the simulation, the following settings are set/applied:
+\begin{itemize}
+\item The sampling frequency is 48 kHz.
+\item The test signal played with an amplitude of 0.5.
+\item The test signal is a logarithmic sweep from 0 Hz to 500 Hz during a 10 second period.
+\end{itemize}
+
+The simulation file and needed scripts are found at \path{CD://something }
+
+
+
 In the following section a 10 second simulation is showed with a graphical output of each band, showed in \autoref{fig:SimulationComparisson}. As described above, the signal is a sweep from 0 Hz to 500 Hz in a 10 seconds duration. On the graphs the following color codes are used:
 \begin{itemize}
 \item Blue shows the gain applied in each band
