--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -62,13 +62,7 @@
   howpublished = {\url{http://www.phy.mtu.edu/~suits/notefreqs.html}},
   year = {1998},
 }
-@MISC{sou:NoteA,
-  title = {Physics Department, Michigan Technological University - (Frequencies for equal-tempered scale, A4 = 440 Hz)},
-  author = {B. H. Suits},
-  note = {Downloaded February 19, 2016},
-  howpublished = {\url{http://www.phy.mtu.edu/~suits/notefreqs.html}},
-  year = {1998},
-}
+
 
 @MISC{sou:LoudspeakerRange,
   title = {Understanding How Speaker Drivers Work)},
@@ -78,5 +72,12 @@
   year = {2016},
 }
 
+@MISC{sou:crossSection,
+  title = {Cross section of woofer.)},
+  author = {Internet Amazon},
+  note = {Downloaded May 22, 2016},
+  howpublished = {\url{http://www.speakers.net/dloudspeakers.asp}},
+  year = {2016},
+}
 
 
