--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -50,11 +50,11 @@ The analysis has focused on distortion and non-linearities in an active loudspea
 \item Coil hitting the back plate. 
 \end{itemize}
 
-From the situations it is seen that the most critical situation would be if the coil hits the back plate because it could result in damaging or destroying the speaker. Therefore a system should be designed first and foremost to protect the speaker from being damaged. Secondly it should be designed to reduce the amount of distortion in minimum the woofer frequency range (below 200 Hz), thus avoiding peak limitation as protection. With this the following problem statement is formulated:
+From the situations it is seen that the most critical situation would be if the coil hits the back plate because it could result in damaging or destroying the speaker. Therefore a system should be designed first and foremost to protect the speaker from being damaged. Secondly it should be designed to reduce the amount of distortion in minimum the woofer frequency range (below 200 Hz), thus avoiding peak limitation as protection. The system must be real-time as the system will be used in context with audio streaming\todo{Formulated correctly?}. With this the following problem statement is formulated:
 
 \begin{center}
 \label{ProblemStatement}
-\textit{How can a signal processing system in an active loudspeaker prevent the coil from hitting the back plate of the woofer and reduce distortion compared to peak limitation?}
+\textit{How can a real-time signal processing system in an active loudspeaker prevent the coil from hitting the back plate of the woofer and reduce distortion compared to peak limitation?}
 \end{center}
 
 Besides the problem stated above, DALI desires to have incorporated an equalizer\footnote{\scalebox{0.7}{\path{CD://MAIL/DALIRequirements.pdf}} }. % for the commercial user so it will be able to function more optimal in different room sizes. Further more it should be fully customizable for ongoing adjustments during the development period. The DALI requirements are derived via e-mail correspondence located at: \scalebox{0.7}{\path{CD://MAIL/DALIRequirements.pdf}}  
