--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -5,7 +5,7 @@ In order to understand how the distortion occurs in a loudspeaker, it is necessa
 %\subsubsection*{The basics}
 The loudspeaker is a transducer which purpose is to convert the electrical energy into acoustical energy. This is done by sending the signal into a loudspeaker which can consist of numerous drivers. The drivers are designed to perform best within their frequency range, hence they are usually different sizes in diameter.
 \begin{itemize}
-\item[] For the high frequencies, which is roughly 2 kHz and above, a tweeter is used of approximately 1 - 2 inches in diameter.
+\item[] For the high frequencies, which is roughly 2 kHz and above, a tweeter is used of approximately 1 - 2 inches in diameter \citep{sou:LoudspeakerRange}. 
 \item[] In the midrange, which is roughly 300 Hz to 200 - 2 kHz, a midrange driver is used of approximately 4 - 6 inches in diameter.
 \item[] The lower frequencies, which is 200 Hz and below, is then handled by the woofer. The woofer is usually 5 - 6 inches and above in diameter.
 \end{itemize}
@@ -19,12 +19,12 @@ Because the tweeter has a very low excursion range, which means it cannot break 
 When the speaker plays sound it does so by moving the diaphragm in the woofer. This difference in air pressure is then perceived as sound. The sound has a specific wavelength according to the frequency. This means that trying to move the air with a speaker cone is more efficient in a specific frequency area according to the diameter. %If a speaker with a small diameter tries to generate a large wavelength the sound would bend and escape around the edges. 
 Since a large wavelength requires more air to be pushed, speaker cones is sized according to what area they are going to play.
 
-Next, the woofer needs to deliver a sufficient \gls{SPL}. This creates the need for enough excursion of the diaphragm. Without dwelling to much on the speaker construction, the diaphragm is suspended in free air hold in place by the surround, see \autoref{fig:regularspeaker}, and the spider. The spider is a diaphragm holding the voice coil more tightly in place. 
+Next, the woofer needs to deliver a sufficient \gls{SPL}. This creates the need for enough excursion of the diaphragm. Without dwelling to much on the speaker construction, the diaphragm is suspended in free air hold in place by the surround, see \autoref{fig:louderspeakerCrossSection}, and the spider. The spider is a diaphragm holding the voice coil more tightly in place. 
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{Speaker-cross-section}
-\caption{Cross section of a woofer.}
+\caption{Cross section of a woofer \citep{sou:crossSection}.}
 \label{fig:louderspeakerCrossSection}
 \end{figure}
 
